--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,12 @@ django_todo/settings.py
 django_todo/urls.py
 django_todo/wsgi.py
 manage.py
+env.py 
+products/migrations/0001_initial.py
+search/__init__.py
+search/admin.py
+search/apps.py
+search/migrations/
+search/models.py
+search/tests.py
+search/views.py
