--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 asgiref==3.2.3
+certifi==2019.11.28
+chardet==3.0.4
 dj-database-url==0.5.0
 Django==1.11.24
+django-forms-bootstrap==3.1.0
 dnspython==1.16.0
 gunicorn==20.0.4
+idna==2.9
+Pillow==7.0.0
 pytz==2019.3
+requests==2.23.0
 sqlparse==0.3.1
+stripe==2.44.0
+urllib3==1.25.8
