--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,20 @@ dj-database-url==0.5.0
 Django==1.11.24
 django-forms-bootstrap==3.1.0
 dnspython==1.16.0
+docutils==0.16
 gunicorn==20.0.4
+html5lib==1.0.1
 idna==2.9
+jmespath==0.9.5
+olefile==0.46
 Pillow==7.0.0
 psycopg2==2.8.4
 pycurl==7.43.0.5
+python-dateutil==2.8.1
 pytz==2019.3
 requests==2.23.0
+six==1.14.0
 sqlparse==0.3.1
 stripe==2.44.0
 urllib3==1.25.8
+webencodings==0.5.1
