--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,19 @@
-asgiref==3.2.3
-certifi==2019.11.28
-chardet==3.0.4
-colorama==0.4.3
-dj-database-url==0.5.0
-Django==1.11.24
-django-forms-bootstrap==3.1.0
-dnspython==1.16.0
-docutils==0.16
-gunicorn==20.0.4
-html5lib==1.0.1
-idna==2.9
-jmespath==0.9.5
-olefile==0.46
-Pillow==7.0.0
-psycopg2==2.8.4
-pycurl==7.43.0.5
-python-dateutil==2.8.1
-pytz==2019.3
-requests==2.23.0
-six==1.14.0
-sqlparse==0.3.1
-stripe==2.44.0
-urllib3==1.25.8
-webencodings==0.5.1
+Django~=1.11.19
+Pillow~=4.3.0
+chardet~=2.2.1
+colorama~=0.2.5
+django-forms-bootstrap~=3.1.0
+docutils~=0.14
+gunicorn~=19.7.1
+html5lib~=0.999
+jmespath~=0.9.3
+olefile~=0.44
+psycopg2~=2.7.3.1
+pycurl~=7.19.3
+python-dateutil~=2.6.1
+pytz~=2017.2
+requests~=2.20
+six~=1.5.2
+stripe~=1.70.0
+urllib3~=1.23
+wheel~=0.24.0
