requirements.txt updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,19 @@
-asgiref==3.2.3
-certifi==2019.11.28
+Django==1.11.28
+Pillow==6.2.1
 chardet==3.0.2
 colorama==0.2.5
-dj-database-url==0.5.0
-Django==1.11.28
 django-forms-bootstrap==3.1.0
-dnspython==1.16.0
 docutils==0.14
 gunicorn==19.7.1
 html5lib==0.999
-idna==2.7
 jmespath==0.9.3
 olefile==0.44
-Pillow==6.2.1
-psycopg2==2.8.4
-pycurl==7.43.0.5
+psycopg2==2.7.3.1
+pycurl==7.19.3
 python-dateutil==2.6.1
 pytz==2017.2
-requests==2.20.0
+requests==2.20
 six==1.5.2
-sqlparse==0.3.1
 stripe==1.70.0
 urllib3==1.23
-webencodings==0.5.1
+wheel==0.34.2
